# system-index

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/models/: mod.rs
src/tui/: mod.rs
tests/: integration_tests.rs
