[package]
name = "system-index"
version = "0.1.0"
edition = "2021"
authors = ["npsg02"]
description = "A CLI and TUI tool for displaying system information"
license = "MIT OR Apache-2.0"
repository = "https://github.com/npsg02/system-index"

[dependencies]
sysinfo = "0.30"
ratatui = "0.24"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
